# ha-garmin-dive

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  release-please-config.json  requirements_dev.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release-please.yml  release.yml  test.yml  validate.yml
custom_components/garmin_dive/: __init__.py  api.py  auth.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  gear.py  icons.json  manifest.json  photos.py  sensor.py  services.yaml
custom_components/garmin_dive/translations/: en.json
dashboards/travel-story/: README.md  dashboard.yaml  helpers.yaml
docs/superpowers/plans/: 2026-05-03-ha-garmin-dive.md
docs/superpowers/specs/: 2026-05-03-ha-garmin-dive-design.md
tests/: conftest.py  conftest_helpers.py  test_api.py  test_auth.py  test_binary_sensor.py  test_button.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_gear.py  test_init.py  test_integration_endtoend.py  test_photos.py  test_sensor.py
tests/fixtures/: dive_devices.json  dive_images_graphql.json  dive_summary_full.json  dive_summary_one.json  dive_tags.json  gear_detail_light.json  gear_detail_other.json  gear_detail_regulator.json  gear_detail_transmitter.json  gear_summary.json  social_profile_v2.json
